# local-ferris

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  security.yml
corpus/: manifest.toml
crates/lf-cli/: Cargo.toml
crates/lf-cli/src/: bench.rs  chat.rs  cli.rs  complete.rs  download.rs  eval.rs  main.rs  quantize.rs
crates/lf-docs/: Cargo.toml
crates/lf-download/: Cargo.toml
crates/lf-download/src/: lib.rs
crates/lf-embed/: Cargo.toml
crates/lf-inference/: Cargo.toml
crates/lf-inference/src/: lib.rs  prompt.rs  quantize.rs
crates/lf-inference/tests/: smoke.rs
crates/lf-rag/: Cargo.toml
crates/lf-sandbox/: Cargo.toml
evals/: rust_suite.toml
manifests/: models.toml
scripts/: build_corpus.py  convert_hf_to_gguf.sh
