[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Jonathan A. McCormick, Jr."]
license = "MIT"
repository = "https://github.com/JonathanMcCormickJr/local-ferris"
readme = "../../README.md"

[workspace.dependencies]
llama-gguf = { version = "0.14", default-features = false }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
directories = "5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
