[package]
name = "lf-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "local-ferris"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
lf-inference = { path = "../lf-inference", version = "0.1.0" }
lf-download = { path = "../lf-download", version = "0.1.0" }
