[package]
name = "lf-download"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
toml.workspace = true
directories.workspace = true
