[package]
name = "lf-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
llama-gguf = { workspace = true, features = ["cpu"] }
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
toml.workspace = true
